--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,8 @@
 .header  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4px;
   font-family: monospace;
   background: papayawhip;
 }
@@ -12,6 +16,11 @@
 }
 
 ul {
+  display: flex;
+  gap: 8px;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
