--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,8 +1,11 @@
 .container {
+  display: flex;
+  flex-direction: column;
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  justify-content:center; 
 }
 
 .box {
@@ -12,4 +15,5 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  align-self: center;
 }
